# open-machine

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
code/core/inc/: om.h  om_actor.h  om_assert.h  om_bus.h  om_config.h  om_event.h  om_hsm.h  om_machine.h  om_mutex.h  om_pool.h  om_queue.h  om_timer.h  om_trace.h
code/core/ports/cmsis_os2/: om_actor.c  om_actor_cmsis.c  om_mutex_cmsis.c  om_mutex_port.h  om_pool.c  om_pool_cmsis.c  om_port.h  om_timer.c
code/core/ports/lite/: om_actor.c  om_actor_lite.c  om_pool_lite.c  om_port.h
code/core/ports/posix/: om_actor_posix.c  om_mutex_port.h  om_mutex_posix.c  om_pool_posix.c  om_port.h
code/core/src/: om_actor.c  om_bus.c  om_hsm.c  om_machine.c  om_pool.c  om_queue.c  om_timer.c  om_trace.c
code/examples/blinky/: application.c  application.h  blinky.c  blinky.h  board.h  bsp.h
code/examples/blinky/blinky_h743/: Makefile  blinky_h743.ioc  board.c
code/examples/blinky/blinky_h743/Core/Inc/: FreeRTOSConfig.h
code/examples/blinky/blinky_h743/Core/Src/: freertos.c
code/examples/blinky/blinky_posix/: CMakeLists.txt  board.c  main.c
code/examples/blinky/nucleo_h743_freertos/: .mxproject  Makefile  bsp.c  nucleo_h743_freertos.ioc
code/examples/blinky/nucleo_h743_freertos/Core/Inc/: main.h
code/examples/blinky/nucleo_h743_freertos/Core/Src/: freertos.c  gpio.c
code/examples/blinky_plus/: bsp.h
code/examples/tea_timer/: application.c  application.h  board.h  brew_control.c  brew_control.h  brew_events.c  brew_events.h  button_monitor.c  button_monitor.h  shared_signals.h  user_interface.c  user_interface.h
code/examples/tea_timer/nucleo_h743_freertos/: Makefile  board.c  nucleo_h743_freertos.ioc
code/examples/tea_timer/tea_timer_h743/: Makefile  board.c  tea_timer_h743.ioc
code/examples/tea_timer/tea_timer_h743/Core/Inc/: main.h
code/examples/tea_timer/tea_timer_h743/Core/Src/: freertos.c  gpio.c  main.c
code/pal/: om_gpio.c  om_gpio.h  om_i2c_control.c  om_i2c_control.h  om_pwm.h  om_uart.c  om_uart.h
code/pal/ports/stm32_cube/: om_gpio_stm32.c  om_i2c_control_stm32.c  om_pal_port.h  om_pal_port_gpio.h  om_pal_port_i2c.h  om_pal_port_pwm.h  om_pal_port_uart.h  om_pal_stm32.h  om_pwm_stm32.c  om_uart_stm32.c
code/test/hsm_test/: CMakeLists.txt  hsm.c  hsm.h  hsm.puml  hsm_tests.c  main.c  mut.c  mut.h  mut.puml  mut_tests.c
tools/build_tools_win64/4.2.1-2/distro-info/scripts/: host-defs-source.sh
